--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,16 @@
-name: Hello World
+name: Automated Test
 on: [push]
 jobs:
-  output_hello_world:
-    name: Output Hello World
+  automated_test:
+    name: Automated Test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Run a script
-      run: echo "Hello, World!"
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Produce test1.txt output
+      run: python3 find_lowest_number.py test1_input.txt > test1_result.txt
+    - name: Compare expected output to actual
+      run: diff test1_expected.txt test1_result.txt
