--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,6 @@ jobs:
       with:
         python-version: "3.10"
     - name: Produce test1.txt output
-      run: python3 find_lowest_number.py test1_input.txt test1_result.txt
-    - name: Compare the expected output to actual
+      run: python find_lowest_number.py test1_input.txt test1_result.txt
+    - name: Compare the expected output to the actual
       run: diff test1_expected.txt test1_result.txt
