--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,6 @@ jobs:
       with:
         python-version: "3.10"
     - name: Produce test1.txt output
-      run: python find_lowest_number.py test1_input.txt test1_result.txt
+      run: python find_lowest_number.py test_data/test1_input.txt test1_result.txt
     - name: Compare the expected output to the actual
-      run: diff test1_expected.txt test1_result.txt
+      run: diff test_data/test1_expected.txt test1_result.txt
