--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,11 @@ jobs:
       run: python find_lowest_number.py test_data/test1_input.txt test1_result.txt
     - name: Compare the expected output to the actual
       run: diff test_data/test1_expected.txt test1_result.txt
+    - name: Produce test2.txt output
+      run: python find_lowest_number.py test_data/test2_input.txt test2_result.txt
+    - name: Compare the expected output to the actual
+      run: diff test_data/test2_expected.txt test2_result.txt
+    - name: Produce test3.txt output
+      run: python find_lowest_number.py test_data/test3_input.txt test3_result.txt
+    - name: Compare the expected output to the actual
+      run: diff test_data/test3_expected.txt test3_result.txt
